--- a/TylerQuayleMP4/public_html/index.html
+++ b/TylerQuayleMP4/public_html/index.html
@@ -66,7 +66,7 @@
         <script type="text/javascript" src="src/MyGame/MyGame.js"></script>
         <script type="text/javascript" src="src/MyGame/Editor.js"></script>
         <script type="text/javascript" src="src/MyGame/Objects/Dye.js"></script>
-        
+        <script type="text/javascript" src="src/MyGame/Objects/DyePack.js"></script>
     </head>
 
     <body onload="
