--- a/TylerQuayleMP4/public_html/index.html
+++ b/TylerQuayleMP4/public_html/index.html
@@ -67,6 +67,7 @@
         <script type="text/javascript" src="src/MyGame/Editor.js"></script>
         <script type="text/javascript" src="src/MyGame/Objects/Dye.js"></script>
         <script type="text/javascript" src="src/MyGame/Objects/DyePack.js"></script>
+        <script type="text/javascript" src="src/MyGame/Objects/Patrol.js"></script>
     </head>
 
     <body onload="
