--- a/TylerQuayleMP4/public_html/index.html
+++ b/TylerQuayleMP4/public_html/index.html
@@ -68,6 +68,7 @@
         <script type="text/javascript" src="src/MyGame/Objects/Dye.js"></script>
         <script type="text/javascript" src="src/MyGame/Objects/DyePack.js"></script>
         <script type="text/javascript" src="src/MyGame/Objects/Patrol.js"></script>
+        <script type="text/javascript" src="src/MyGame/Objects/Wings.js"></script>
     </head>
 
     <body onload="
