--- a/TylerQuayleMP4/public_html/index.html
+++ b/TylerQuayleMP4/public_html/index.html
@@ -8,8 +8,8 @@
             }
 
         </style>
-        <title>Example 7.6: Line Support </title>
-        <link rel ="icon" type ="image/x-icon" href="./assets/favicon.png">
+        <title>Tyler Quayle - MP4 </title>
+        <link rel ="icon" type ="image/x-icon" href="./assets/favicon.ico">
 
         <!-- the following says there are javascript source code contained in 
              the external source files
@@ -46,6 +46,7 @@
         <script type="text/javascript" src="src/Engine/Renderables/SpriteAnimateRenderable.js"></script>
         <script type="text/javascript" src="src/Engine/Renderables/FontRenderable.js"></script>
         <script type="text/javascript" src="src/Engine/Renderables/LineRenderable.js"></script>
+        <script type="text/javascript" src="src/Engine/Renderables/LineRenderable_BB.js"></script>
         <!-- GameObject -->
         <script type="text/javascript" src="src/Engine/GameObjects/GameObject.js"></script>
         <script type="text/javascript" src="src/Engine/GameObjects/GameObject_PixelCollision.js"></script>
@@ -64,7 +65,6 @@
 
         <!-- Client game code -->
         <script type="text/javascript" src="src/MyGame/MyGame.js"></script>
-        <script type="text/javascript" src="src/MyGame/Editor.js"></script>
         <script type="text/javascript" src="src/MyGame/Objects/Dye.js"></script>
         <script type="text/javascript" src="src/MyGame/Objects/DyePack.js"></script>
         <script type="text/javascript" src="src/MyGame/Objects/Patrol.js"></script>
