--- a/Project 6/TylerQuayleMP6/public_html/index.html
+++ b/Project 6/TylerQuayleMP6/public_html/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <style>
+            body {
+            background-image: url("assets/bg.png");
+            background-repeat: repeat;
+            }
+        </style>
         <title>Tyler Quayle - MP6 </title>
-        <link rel ="icon" type ="image/x-icon" href="./assets/favicon.png">
+        <link rel ="icon" type ="image/x-icon" href="./assets/favicon.ico">
 
         <!-- the following says there are javascript source code contained in 
              the external source files
@@ -35,6 +41,7 @@
         <script type="text/javascript" src="src/Engine/Renderables/TextureRenderable.js"></script>
         <script type="text/javascript" src="src/Engine/Renderables/TextureRenderable_PixelCollision.js"></script>
         <script type="text/javascript" src="src/Engine/Renderables/SpriteRenderable.js"></script>
+        <script type="text/javascript" src="src/Engine/Renderables/RigidCircleRenderable.js"></script>
         <script type="text/javascript" src="src/Engine/Renderables/SpriteRenderable_PixelCollision.js"></script>
         <script type="text/javascript" src="src/Engine/Renderables/SpriteAnimateRenderable.js"></script>
         <script type="text/javascript" src="src/Engine/Renderables/FontRenderable.js"></script>
@@ -59,6 +66,7 @@
         <script type="text/javascript" src="src/Engine/Core/Engine_Physics.js"></script>
         <script type="text/javascript" src="src/Engine/RigidShapes/RigidShape.js"></script>
         <script type="text/javascript" src="src/Engine/RigidShapes/RigidCircle.js"></script>
+        <script type="text/javascript" src="src/Engine/RigidShapes/RigidCircle_Collision.js"></script>
         <script type="text/javascript" src="src/Engine/RigidShapes/RigidRectangle.js"></script>
         <!--
         <script type="text/javascript" src="src/Engine/RigidShapes/CollisionInfo.js"></script>
@@ -68,7 +76,9 @@
         <!-- Client game code -->
         <script type="text/javascript" src="src/MyGame/MyGame.js"></script>
         <script type="text/javascript" src="src/MyGame/Objects/Hero.js"></script>
+        <script type="text/javascript" src="src/MyGame/Objects/Circle.js"></script>
         <script type="text/javascript" src="src/MyGame/Objects/Minion.js"></script>
+        <script type="text/javascript" src="src/MyGame/Objects/PrintLine.js"></script>
         
     </head>
 
@@ -76,18 +86,19 @@
         var myGame = new MyGame();
         gEngine.Core.initializeEngineCore('GLCanvas', myGame);
      ">
-        <div id="canvas" align="center">
+        <div id="canvas" style="float:left;">
             <canvas id="GLCanvas" width="800" height="600" >
                 <!-- GLCanvas is the area we will draw in: a 640x480 area. -->
                 Your browser does not support the HTML5 canvas.
                 <!-- this message will show only if WebGL clearing failed -->
             </canvas>
 
-            <div id="D1"></div>
+            
             <div id="D2"></div>
             <div id="D3"></div>
             <div id="D4"></div>
             <div id="D5"></div>
         </div>
+        <div id="D1" style="float:right"></div>
     </body>
 </html>
