--- a/Project 6/TylerQuayleMP6/public_html/index.html
+++ b/Project 6/TylerQuayleMP6/public_html/index.html
@@ -42,6 +42,7 @@
         <script type="text/javascript" src="src/Engine/Renderables/TextureRenderable_PixelCollision.js"></script>
         <script type="text/javascript" src="src/Engine/Renderables/SpriteRenderable.js"></script>
         <script type="text/javascript" src="src/Engine/Renderables/RigidCircleRenderable.js"></script>
+        <script type="text/javascript" src="src/Engine/Renderables/RigidRectangleRenderable.js"></script>
         <script type="text/javascript" src="src/Engine/Renderables/SpriteRenderable_PixelCollision.js"></script>
         <script type="text/javascript" src="src/Engine/Renderables/SpriteAnimateRenderable.js"></script>
         <script type="text/javascript" src="src/Engine/Renderables/FontRenderable.js"></script>
@@ -77,6 +78,7 @@
         <script type="text/javascript" src="src/MyGame/MyGame.js"></script>
         <script type="text/javascript" src="src/MyGame/Objects/Hero.js"></script>
         <script type="text/javascript" src="src/MyGame/Objects/Circle.js"></script>
+        <script type="text/javascript" src="src/MyGame/Objects/Rectangle.js"></script>
         <script type="text/javascript" src="src/MyGame/Objects/Minion.js"></script>
         <script type="text/javascript" src="src/MyGame/Objects/PrintLine.js"></script>
         
