--- a/Project 7/TylerQuayleMP7/public_html/index.html
+++ b/Project 7/TylerQuayleMP7/public_html/index.html
@@ -65,13 +65,15 @@
         <script type="text/javascript" src="src/Engine/RigidShapes/RigidCircle_Collision.js"></script>
         <script type="text/javascript" src="src/Engine/RigidShapes/RigidRectangle_Collision.js"></script>
         <script type="text/javascript" src="src/Engine/RigidShapes/RigidShape_Behavior.js"></script>
+        <script type="text/javascript" src="src/Engine/RigidShapes/RigidShape_Collision.js"></script>
         <!-- Client game code -->
         <script type="text/javascript" src="src/MyGame/MyGame.js"></script>
-        <script type="text/javascript" src="src/MyGame/Objects/WASDObj.js"></script>
-        <script type="text/javascript" src="src/MyGame/Objects/Hero.js"></script>
-        <script type="text/javascript" src="src/MyGame/Objects/Minion.js"></script>
+        <script type="text/javascript" src="src/MyGame/Objects/GeneralObj.js"></script>
         <script type="text/javascript" src="src/MyGame/Objects/Platform.js"></script>
         <script type="text/javascript" src="src/MyGame/Objects/Pillar.js"></script>
+        <script type="text/javascript" src="src/MyGame/Objects/Rect.js"></script>
+        <script type="text/javascript" src="src/MyGame/Objects/Circ.js"></script>
+        <script type="text/javascript" src="src/MyGame/Objects/Target.js"></script>
         
         <script type="text/javascript" src="src/Engine/Output/PrintLine.js"></script>
         <script type="text/javascript" src="src/Engine/Output/PrintHandler.js"></script>
@@ -80,14 +82,19 @@
 
     <body onload="
         var myGame = new MyGame();
-        gEngine.Core.initializeEngineCore('GLCanvas', myGame);
-     ">
-        <canvas id="GLCanvas" width="800" height="600">
-            <!-- GLCanvas is the area we will draw in: a 640x480 area. -->
-            Your browser does not support the HTML5 canvas.
-            <!-- this message will show only if WebGL clearing failed -->
-        </canvas>
-        <div id="FPS"></div>
-        <div id="D1"></div>
+        gEngine.Core.initializeEngineCore('GLCanvas', myGame);">
+            <div align="center">
+                <canvas id="GLCanvas" width="800" height="600">
+                    <!-- GLCanvas is the area we will draw in: a 640x480 area. -->
+                    Your browser does not support the HTML5 canvas.
+                    <!-- this message will show only if WebGL clearing failed -->
+                </canvas>
+                <div id="FPS"></div>
+                <div id="D1"></div>
+                <div id="D2"></div>
+                <div id="D3"></div>
+                <div id="D4"></div>
+            </div>
     </body>
+
 </html>
