--- a/Project 7/TylerQuayleMP7/public_html/index.html
+++ b/Project 7/TylerQuayleMP7/public_html/index.html
@@ -90,10 +90,12 @@
                     <!-- this message will show only if WebGL clearing failed -->
                 </canvas>
                 <div id="FPS"></div>
+                <div id="INFO"></div>
                 <div id="D1"></div>
                 <div id="D2"></div>
                 <div id="D3"></div>
                 <div id="D4"></div>
+                <div id="Debug"></div>
             </div>
     </body>
 
