--- a/Project 7/TylerQuayleMP7/public_html/index.html
+++ b/Project 7/TylerQuayleMP7/public_html/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <style>
+            body {
+            background-image: url("assets/bg.png");
+            background-repeat: repeat;
+            }
+        </style>
         <title>Tyler Quayle - MP7 </title>
         <link rel ="icon" type ="image/x-icon" href="./assets/favicon.ico">
 
@@ -80,23 +86,25 @@
         
     </head>
 
-    <body onload="
+        <body onload="
         var myGame = new MyGame();
-        gEngine.Core.initializeEngineCore('GLCanvas', myGame);">
-            <div align="center">
-                <canvas id="GLCanvas" width="800" height="600">
-                    <!-- GLCanvas is the area we will draw in: a 640x480 area. -->
-                    Your browser does not support the HTML5 canvas.
-                    <!-- this message will show only if WebGL clearing failed -->
-                </canvas>
+        gEngine.Core.initializeEngineCore('GLCanvas', myGame);
+     ">
+        <div id="canvas" style="float:left;">
+            <canvas id="GLCanvas" width="800" height="600" >
+                <!-- GLCanvas is the area we will draw in: a 640x480 area. -->
+                Your browser does not support the HTML5 canvas.
+                <!-- this message will show only if WebGL clearing failed -->
+            </canvas>
+
                 <div id="FPS"></div>
-                <div id="INFO"></div>
                 <div id="D1"></div>
                 <div id="D2"></div>
                 <div id="D3"></div>
                 <div id="D4"></div>
                 <div id="Debug"></div>
-            </div>
+        </div>
+        <div id="INFO" style="float:right"></div>
     </body>
 
 </html>
