--- a/Project 7/TylerQuayleMP7/public_html/index.html
+++ b/Project 7/TylerQuayleMP7/public_html/index.html
@@ -74,6 +74,7 @@
         <script type="text/javascript" src="src/Engine/RigidShapes/RigidShape_Collision.js"></script>
         <!-- Client game code -->
         <script type="text/javascript" src="src/MyGame/MyGame.js"></script>
+        <script type="text/javascript" src="src/MyGame/MyGame_Utilities.js"></script>
         <script type="text/javascript" src="src/MyGame/Objects/GeneralObj.js"></script>
         <script type="text/javascript" src="src/MyGame/Objects/Platform.js"></script>
         <script type="text/javascript" src="src/MyGame/Objects/Pillar.js"></script>
